laba
d = 45
>>> print #(' Тот самый хром_4 с Linage2')
<built-in function print>
>>> d = 31 # присваеваем значение переменной 
>>> print (d)# выводим значение
31
>>> print #('Ионов Виктор Денисович')# ФИО
<built-in function print>
>>> print ('Ионов Виктор Денисович')# ФИО
Ионов Виктор Денисович
>>> print (' Тот самый хром_4 с Linage2')
 Тот самый хром_4 с Linage2
>>> print ('Ионов Виктор Денисович\n Р20Б1\n 21.10.2002'О
  File "<stdin>", line 1
    print ('Ионов Виктор Денисович\n Р20Б1\n 21.10.2002'О
                                                        ^
SyntaxError: invalid syntax
>>> print ('Ионов Виктор Денисович\n Р20Б1\n 21.10.2002')
Ионов Виктор Денисович
 Р20Б1
 21.10.2002
 print ('Росто́в-на-Дону́ (в разговорной речи часто — Ростов) — крупнейший город на юго-западе России, административный центр Южного федерального округа и Ростовской области[6]. Город воинской славы (2008)[7].\n1.Памятник Тачанка\n2.Ростов Арена\n3.Памятник Ростовчанка')
Росто́в-на-Дону́ (в разговорной речи часто — Ростов) — крупнейший город на юго-западе России, административный центр Южного федерального округа и Ростовской области[6]. Город воинской славы (2008)[7].
1.Памятник Тачанка
2.Ростов Арена
3.Памятник Ростовчанка
>>> print ('1941\nРоссия,Украина,Казахстан,Узбекистан,Беларусь');print (); print ('1945\tСССР')
1941
Россия,Украина,Казахстан,Узбекистан,Беларусь

1945    СССР
SyntaxError: invalid syntax
>>> print ('Мы подружимся?');a=input()
Мы подружимся?
Думаю , да
 = input(); print (":D")
:D
print ('\n4\tАлгебр\n3\tРусский\n4\tОПД')

4       Алгебр
3       Русский
4       ОПД
>>> a=" Петр "; b=" Виталий "; c=" Анфиса "; print (a + b + c, 'гуляем каждый раз вместе')
 Петр  Виталий  Анфиса  гуляем каждый раз вместе
 range_stocks = input(); print ("Запасы апельсин на складе", orange_stocks ,"кг")
1051
Запасы апельсин на складе 1051 кг
